# IndiaRuns-Intelligent-Candidate-Discovery-Ranking-System

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  NEXUS_UI_Design_Brief_All_27_Pages.md  README.md  RECRUITER_README.md  agents_06_08.txt  docker-compose.yml  docs_content.txt  master_doc.txt  master_doc_full.txt  mypy.ini  ruff.toml  scaffold.ps1
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: behavioral_intelligence.py  growth_potential.py
backend/app/application/: candidate_service.py  copilot_service.py  job_service.py  matching_service.py
backend/app/pipelines/: ranking_pipeline.py
backend/app/schemas/: agent.py  candidate.py  copilot.py  document.py  evaluation.py  explainability.py  extraction.py  feature_store.py  job.py  job_document.py  job_extraction.py  pipeline.py  ranking.py  retrieval.py
backend/app/workers/: arq_worker.py
backend/data/: jobs.json
backend/data/submissions/: submission_metadata.json  team_test.xlsx  test_submission_1.csv  test_submission_2.csv
backend/prompts/copilot/: v1.md
backend/prompts/evaluation/: v1.md
backend/prompts/explainability/: v1.md
backend/prompts/job/: v1.md
backend/services/: submission_service.py  submission_writer.py
backend/temp_test_data/: candidate_features.json  candidate_profiles.json  evaluation_reports.json  explainability_reports.json  jobs.json  matching_results.json  matching_tasks.json
backend/temp_test_data/submissions/: smoke_test_team.csv  submission_metadata.json
backend/tests/agents/: test_candidate_agent.py  test_copilot_agent.py  test_evaluation_agent.py  test_evaluation_contracts.py  test_explainability_agent.py  test_job_agent.py  test_retrieval.py
backend/tests/api/: test_endpoints.py
backend/tests/benchmark/: test_benchmark.py
backend/tests/domain/: test_ranking_engine.py
backend/tests/integration/: test_e2e_smoke.py  test_submission_export.py
backend/tests/unit/: test_ranking_pipeline.py  (+1 more)
(+137 files in other folders)
