[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-backend"
version = "0.1.0"
description = "NEXUS AI Hiring Intelligence Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.9.1",
    "redis>=5.0.7",
    "arq>=0.26.0",
    "structlog>=24.2.0",
    "tenacity>=8.4.1",
    "google-genai>=0.5.0",
    "networkx>=3.3",
    "docling>=1.0.0",
    "sentence-transformers>=3.0.1",
    "spacy>=3.7.5",
    "python-multipart>=0.0.32",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "watchfiles>=0.22.0"
]
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 3
